--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -4,3 +4,12 @@ $iconWhiteSpritePath: image-path('glyphicons-halflings-white.png');
 @import "bootstrap";
 body { padding-top: 80px; }
 @import "bootstrap-responsive";
+
+/*
+.carousel {
+  width: 940px;
+}
+*/
+.carousel-inner { text-align: center; }
+.carousel .item > img { display: inline-block; }
+.carousel { background-color: black; }
