--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,6 +1,6 @@
-#roundshape
+%p
   = link_to t('global.show'), @article
   |
-  \#{link_to t('global.back'), articles_path}
+  = link_to t('global.back'), articles_path
 
 = render 'form'
