--- a/app/views/board/trans_list.html.haml
+++ b/app/views/board/trans_list.html.haml
@@ -1,8 +1,7 @@
-#wide
-  .bordershape
-    = t('transaction.length') + @trans.length.to_s
-    = t('formtastic.labels.transaction.amount') + @trans.sum('amount').to_s
-    = t('formtastic.labels.transaction.point') + @trans.sum('point').to_s
+.alert.alert-info
+  = t('transaction.length') + @trans.length.to_s
+  = t('simple_form.labels.transaction.amount') + @trans.sum('amount').to_s
+  = t('simple_form.labels.transaction.point') + @trans.sum('point').to_s
 
 #wide
   = render 'transactions/trans'
