--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -1,7 +1,12 @@
-#roundshape
-  = link_to t('global.show'), @task 
-  \|
-  = link_to t('global.back'), tasks_path
+.row-fluid
+  .span2
+    %br
+  .span8
+    %p
+      = link_to t('global.show'), @task 
+      \|
+      = link_to t('global.back'), tasks_path
 
-= render 'form'
+    = render 'form'
+  .span2
 
