--- a/app/views/board/service.html.haml
+++ b/app/views/board/service.html.haml
@@ -1,10 +1,9 @@
-#page-wrap
-  .info-col
+.row-fluid
+  .span6
     %h2= t 'service.manager'
-    %a.image.customer
     %dl
       - @users.each do |u|
-        %dt= t('service.service') + ': ' + u.username
+        %dt{:class=>'label'}= t('service.service') + ': ' + u.username
         %dd
           - if u.im_q
             = 'QQ :' + u.im_q
@@ -12,12 +11,11 @@
             %br
             = "Email: #{u.im_q}@qq.com"
 
-  .info-col
+  .span6
     %h2= t 'service.admin'
-    %a.image.manager
     %dl
       - @admins.each do |u|
-        %dt= t('service.administrator') + ': ' + u.username
+        %dt{:class=>'label'}= t('service.administrator') + ': ' + u.username
         %dd
           - if u.im_q
             = 'QQ :' + u.im_q
