--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,37 +1,39 @@
-#roundshape
-  = link_to t("site.cancel_account"), registration_path(resource_name), :confirm => t("site.are_you_sure"), :method => :delete
-  \|
-  = link_to t("page.back"), :back
+.row-fluid
+  .span3
+    %br
+  .span6
+    .alert.alert-danger
+      = link_to t("site.cancel_account"), registration_path(resource_name), :confirm => t("site.are_you_sure"), :method => :delete, :class=>'btn btn-danger'
 
-/
-  %h2
-    = t 'account.edit_account'
-.bordershape
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-    = devise_error_messages!
     /
+      %h2
+        = t 'account.edit_account'
+    = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method=>:put, :class=>'well form-horizontal' }) do |f|
+      = devise_error_messages!
+      /
+        %p
+          =# t 'site.login_name'
+          %br/
+          =# f.text_field :username, { :class => 'validate[required],minSize[6],maxSize[20]' }
+      /
+        %p
+          =# t 'page.email'
+          %br/
+          =# f.text_field :email, { :class => 'validate[required],custom[email]' }
       %p
-        =# t 'site.login_name'
+        = t 'site.password'
+        %i= t 'site.leave_blank'
         %br/
-        =# f.text_field :username, { :class => 'validate[required],minSize[6],maxSize[20]' }
-    /
+        = f.password_field :password, { :class => 'validate[required],minSize[6],maxSize[20]' }
       %p
-        =# t 'page.email'
+        = t 'site.password_confirmation'
         %br/
-        =# f.text_field :email, { :class => 'validate[required],custom[email]' }
-    %p
-      = t 'site.password'
-      %i= t 'site.leave_blank'
-      %br/
-      = f.password_field :password, { :class => 'validate[required],minSize[6],maxSize[20]' }
-    %p
-      = t 'site.password_confirmation'
-      %br/
-      = f.password_field :password_confirmation, { :class => 'validate[required,equals[user_password]],minSize[6],maxSize[20]' }
-    %p
-      = t 'site.current_password'
-      %i= t 'site.need_current_password'
-      %br/
-      = f.password_field :current_password, { :class => 'validate[required],minSize[6],maxSize[20]' }
-    %p= f.submit t("site.update")
-
+        = f.password_field :password_confirmation, { :class => 'validate[required,equals[user_password]],minSize[6],maxSize[20]' }
+      %p
+        = t 'site.current_password'
+        %i= t 'site.need_current_password'
+        %br/
+        = f.password_field :current_password, { :class => 'validate[required],minSize[6],maxSize[20]' }
+      %p
+        = f.submit t("site.update"), :class=>'btn btn-success'
+        = link_to t("page.back"), :back, :class=>'btn'
