--- a/app/views/devise/unlocks/new.html.haml
+++ b/app/views/devise/unlocks/new.html.haml
@@ -1,10 +1,14 @@
-= render :partial => "devise/shared/links"
-%h2= t 'site.send_unlock'
-.bordershape
-  = form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f|
-    = devise_error_messages!
+.row-fluid
+  .span3
+    %br
+  .span6
     %p
-      = t 'page.email'
-      %br/
-      = f.text_field :email, { :class => 'validate[required],custom[email]' }
-    %p= f.submit t('site.send_unlock')
+      = render :partial => "devise/shared/links"
+    %h2= t 'site.send_unlock'
+    = form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post, :class => 'well form-horizontal'}) do |f|
+      = devise_error_messages!
+      %p
+        = t 'page.email'
+        %br/
+        = f.text_field :email, { :class => 'validate[required],custom[email]' }
+      %p= f.submit t('site.send_unlock'), :class=>'btn btn-primary'
