--- a/app/views/notices/index.html.haml
+++ b/app/views/notices/index.html.haml
@@ -1,21 +1,25 @@
-- if current_user and admin?
-  #roundshape
-    = link_to t('global.create'), new_notice_path
-%table
-  %caption
-  %thead
-    %tr
-      %th= t 'global.title'
-      %th= t 'global.content' 
-      %th= t 'global.created_at'
-      %th
-  - @notices.each do |notice|
-    %tr
-      %td= notice.title.length > 25 ? notice.title[0..25]+'...' : notice.title
-      %td= notice.content.length > 50 ? notice.content[0..50] + '...' : notice.content
-      %td= l notice.created_at, :format => :short
-      %td
-        = link_to image_tag('view.png', :alt=>t('global.show')), notice
-        - if admin? or manager?
-          = link_to image_tag('edit.png', :alt=>t('global.edit')), edit_notice_path(notice)
-          = link_to image_tag('delete.png', :alt=>t('global.delete')), notice, :confirm => t('site.are_you_sure'), :method => :delete
+.row-fluid
+  .span12
+    - if current_user and admin?
+      = link_to t('global.create'), new_notice_path, :class=>'btn btn-primary'
+    %table.table
+      %caption
+      %thead
+        %tr
+          %th= t 'global.title'
+          %th= t 'global.content' 
+          %th= t 'global.created_at'
+          %th
+      - @notices.each do |notice|
+        %tr
+          %td= notice.title.length > 25 ? notice.title[0..25]+'...' : notice.title
+          %td= notice.content.length > 50 ? notice.content[0..50] + '...' : notice.content
+          %td= l notice.created_at, :format => :short
+          %td
+            = link_to notice do
+              %i.icon-info-sign
+              = t('global.show')
+
+            - if admin? or manager?
+              = link_to image_tag('edit.png', :alt=>t('global.edit')), edit_notice_path(notice)
+              = link_to image_tag('delete.png', :alt=>t('global.delete')), notice, :confirm => t('site.are_you_sure'), :method => :delete
