--- a/app/views/notices/show.html.haml
+++ b/app/views/notices/show.html.haml
@@ -1,11 +1,12 @@
-#roundshape
-  = link_to t('global.edit'), edit_notice_path(@notice)
-  |
-  \#{link_to t('global.back'), notices_path}
-.bordershape
+.well
   %p
     %b= t 'global.title'
     = @notice.title
   %p
     %b= t 'global.content'
     = @notice.content
+%p
+  - if admin?
+    = link_to t('global.edit'), edit_notice_path(@notice)
+    |
+  = link_to t('global.back'), notices_path
