--- a/app/views/transports/_transports.html.haml
+++ b/app/views/transports/_transports.html.haml
@@ -1,4 +1,4 @@
-%table
+%table.table.table-condensed
   %caption
   %thead
     %tr
@@ -12,28 +12,29 @@
       %th= t 'formtastic.labels.transport.tran_time'
       %th
       %th
-  - @transports.each do |transport|
-    %tr
-      %td
-        = convert_tran_type(transport.tran_type)
-      %td= (user? and !current_user.transports.include? transport) ? transport.tran_id[0..6]+'*' : transport.tran_id
-      %td= transport.status 
-      %td= transport.users.length
-      %td= transport.from
-      %td= transport.to
-      %td= transport.real_tran
-      %td= l transport.tran_time, :format => :long if transport.tran_time
-      - if current_user.transports.include? transport
+  %tbody
+    - @transports.each do |transport|
+      %tr
         %td
-      - else
-        %td= link_to t('transport.choose'), :controller => 'board', :action => 'choose_transport', :id => transport 
-      - if manager? or admin?
-        %td
-          = link_to t('transport.check_pass'), :controller => 'board', :action => 'check_pass', :id => transport if transport.unchecked?
-          = link_to t('transport.closed'), :controller => 'board', :action => 'close_transport', :id => transport if transport.used?
-          = link_to t('transport.reuse'), :controller => 'board', :action => 'reuse_transport', :id => transport if transport.closed?
-          = link_to t('global.show'), transport
-          = link_to t('global.edit'), edit_transport_path(transport)
-          = link_to t('global.delete'), transport, :confirm => t('site.are_you_sure'), :method => :delete
+          = convert_tran_type(transport.tran_type)
+        %td= (user? and !current_user.transports.include? transport) ? transport.tran_id[0..6]+'*' : transport.tran_id
+        %td= transport.status 
+        %td= transport.users.length
+        %td= transport.from
+        %td= transport.to
+        %td= transport.real_tran
+        %td= l transport.tran_time, :format => :long if transport.tran_time
+        - if current_user.transports.include? transport
+          %td
+        - else
+          %td= link_to t('transport.choose'), :controller => 'board', :action => 'choose_transport', :id => transport 
+        - if manager? or admin?
+          %td
+            = link_to t('transport.check_pass'), :controller => 'board', :action => 'check_pass', :id => transport if transport.unchecked?
+            = link_to t('transport.closed'), :controller => 'board', :action => 'close_transport', :id => transport if transport.used?
+            = link_to t('transport.reuse'), :controller => 'board', :action => 'reuse_transport', :id => transport if transport.closed?
+            = link_to t('global.show'), transport
+            = link_to t('global.edit'), edit_transport_path(transport)
+            = link_to t('global.delete'), transport, :confirm => t('site.are_you_sure'), :method => :delete
 
 = will_paginate @transports
