--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,40 +1,38 @@
-- semantic_form_for @user do |f| 
-  - f.inputs do
-    - if session[:user_edit_mode] == 'point'
-      = f.input :account_credit
-    - if session[:user_edit_mode] == 'password'
-      = f.input :password
-    - if session[:user_edit_mode] == 'role'
-      - if superadmin?
-        = f.input :role_objects
-      - else
-        = f.input :role_objects, :collection => Role.where("name != 'superadmin'")
-    - if session[:user_edit_mode] == 'score'
-      = f.input :score
-    - if session[:user_edit_mode] == 'code'
-      %li{:class=>'password optional'}
-        = label_tag t('site.old_password')
-        = password_field_tag 'old_password', '', :size => 50, :maxlength=>20
-        %p{:class => 'inline-hints'}没有设置则不填
-      = f.input :operate_password, :input_html => { :maxlength=>20 }
-    - if session[:user_edit_mode] == 'state'
-      - if admin?
-        = f.input :status, :collection => ['normal', 'ban', 'forbid']
+= simple_form_for(@user, :html=>{:class=>'well'}) do |f| 
+  - if session[:user_edit_mode] == 'point'
+    = f.input :account_credit
+  - if session[:user_edit_mode] == 'password'
+    = f.input :password
+  - if session[:user_edit_mode] == 'role'
+    - if superadmin?
+      = f.association :roles
+    - else
+      = f.association :roles, :collection => Role.where("name != 'superadmin'")
+  - if session[:user_edit_mode] == 'score'
+    = f.input :score
+  - if session[:user_edit_mode] == 'code'
+    = label_tag t('site.old_password')
+    = password_field_tag 'old_password', '', :size => 50, :maxlength=>20
+    %p{:class => 'inline-hints'}没有设置则不填
+    = f.input :operate_password, :input_html => { :maxlength=>20 }
+  - if session[:user_edit_mode] == 'state'
+    - if admin?
+      = f.input :status, :collection => ['normal', 'ban', 'forbid']
 
-    - if session[:user_edit_mode].nil?
-      = f.input :im
-      = f.input :im_q
-      = f.input :bank_name
-      = f.input :bank_account
-      = f.input :mobile
-      = f.input :person_id
+  - if session[:user_edit_mode].nil?
+    = f.input :im
+    = f.input :im_q
+    = f.input :bank_name
+    = f.input :bank_account
+    = f.input :mobile
+    = f.input :person_id
 
-      /
-        = f.input :shop_taobao
-        = f.input :shop_taobao_url
-        = f.input :shop_paipai
-        = f.input :shop_paipai_url
-        = f.input :shop_youa
-        = f.input :shop_youa_url
+    /
+      = f.input :shop_taobao
+      = f.input :shop_taobao_url
+      = f.input :shop_paipai
+      = f.input :shop_paipai_url
+      = f.input :shop_youa
+      = f.input :shop_youa_url
 
-    = f.commit_button
+  = f.button :submit, :class=>'btn btn-success'
