--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,9 +5,7 @@
     = favicon_link_tag
     = csrf_meta_tag
 
-    = javascript_include_tag 'site'
-
-    = stylesheet_link_tag "application", :media => "all"
+    = stylesheet_link_tag "application"#, :media => "all"
     = javascript_include_tag "application"
 
     = stylesheet_link_tag "validationEngine.jquery"
