--- a/app/views/account/message.html.haml
+++ b/app/views/account/message.html.haml
@@ -5,13 +5,12 @@
 = link_to t('global.back'), :back
 
 %table.table.table-condensed
-  %caption
   %thead
     %tr
-      %th= t 'formtastic.labels.message.title'
-      %th= t 'formtastic.labels.message.msg_type'
-      %th= t 'formtastic.labels.message.priority'
-      %th= t 'formtastic.labels.message.status'
+      %th= t 'simple_form.labels.message.title'
+      %th= t 'simple_form.labels.message.msg_type'
+      %th= t 'simple_form.labels.message.priority'
+      %th= t 'simple_form.labels.message.status'
       %th= t 'manage.send_time'
       %th
   %tbody
