--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,7 @@
 $iconSpritePath: image-path('glyphicons-halflings.png');
 $iconWhiteSpritePath: image-path('glyphicons-halflings-white.png');
 @import "bootstrap";
-body { padding-top: 80px; }
+body { padding-top: 80px; font-family: "Microsoft Yahei";}
 @import "bootstrap-responsive";
 
 /*
@@ -23,20 +23,20 @@ body { padding-top: 80px; }
   width: 940px;
 }
 */
-.carousel-inner { text-align: center; }
-.carousel .item > img { display: inline-block; }
-.carousel { background-color: black; }
-.content {
-  background-color: #eee;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
-}
+/*.carousel-inner { text-align: center; }*/
+/*.carousel .item > img { display: inline-block; }*/
+/*.carousel { background-color: black; }*/
+/*.content {*/
+  /*background-color: #eee;*/
+  /*padding: 20px;*/
+  /*margin: 0 -20px; [> negative indent the amount of the padding to maintain the grid system <]*/
+  /*-webkit-border-radius: 0 0 6px 6px;*/
+  /*-moz-border-radius: 0 0 6px 6px;*/
+  /*border-radius: 0 0 6px 6px;*/
+  /*-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);*/
+  /*-moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);*/
+  /*box-shadow: 0 1px 2px rgba(0,0,0,.15);*/
+/*}*/
 
 .subnav {
     background-color: #EEEEEE;
