--- a/app/views/issues/_operation.html.haml
+++ b/app/views/issues/_operation.html.haml
@@ -1,23 +1,19 @@
-- form_tag :controller => 'board', :action => 'task_issue' do
+= form_tag({:controller => 'board', :action => 'task_issue'}, :class=>'form-horizontal') do
   - if !@task.nil?
     = label_tag t('issue.issue_source')
-    %br
-    .solidshape
-      = radio_button_tag 'issue_source', 'worker'
-      = label_tag t('issue.source_worker')
-      %br
-      = radio_button_tag 'issue_source', 'user', true
-      = label_tag t('issue.source_user')
-    .solidshape
-      = check_box_tag 'return_point'
-      = label_tag t('issue.return_point')
-      %br
-      = check_box_tag 'penalty'
-      = label_tag t('issue.extra_penalty')
-      = number_field_tag 'penalty_value', 1, :in => 1..10
-    %br
+    = radio_button_tag 'issue_source', 'worker'
+    = label_tag t('issue.source_worker')
+    = radio_button_tag 'issue_source', 'user', true
+    = label_tag t('issue.source_user')
+
+    %hr
+    = check_box_tag 'return_point'
+    = label_tag t('issue.return_point')
+    = check_box_tag 'penalty'
+    = label_tag t('issue.extra_penalty')
+    = number_field_tag 'penalty_value', 1, :in => 1..10
+    %hr
   = label_tag t('issue.memo')
-  %br
   = text_area_tag 'memo', nil, :rows => 5, :cols => 50
   %br
-  = submit_tag t('global.post')
+  = submit_tag t('global.post'), :class=>'btn'
