--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,5 +1,4 @@
-- semantic_form_for @message do |f| 
-  - f.inputs do
-    = f.input :title, :input_html => { :class => "validate[required],minSize[5]" }
-    = f.input :content, :as => :text, :input_html => { :class => "validate[required],minSize[5]" }
-    = f.commit_button
+= simple_form_for @message do |f| 
+  = f.input :title, :input_html => { :class => "validate[required],minSize[5]" }
+  = f.input :content, :as => :text, :input_html => { :class => "validate[required],minSize[5]" }
+  = f.button :submit, :class=>'btn btn-success'
