--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -120,4 +120,4 @@
   .span12
     - if @task.can_modify? and @task.user == current_user
       = link_to t('global.edit'), edit_task_path(@task), :class=>'btn btn-primary' |
-    = link_to t('global.back'), :back, :class=>'btn btn-primary'
+    = link_to t('global.back'), tasks_url, :class=>'btn'
